<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="0dp"
    android:padding="0dp"
    tools:context=".presentation.view.fragment.OperationsFragment">

    <TextView
        android:id="@+id/balanceTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/to_parent_default"
        android:text="@string/balance"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/BalanceTitleStyle" />

    <TextView
        android:id="@+id/balanceTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="@string/balance_default"
        app:layout_constraintStart_toStartOf="@+id/balanceTitleTextView"
        app:layout_constraintTop_toBottomOf="@+id/balanceTitleTextView"
        style="@style/BlackBoldTitleStyle"/>

    <TextView
        android:id="@+id/balanceCurrencyTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="3dp"
        android:text="₽"
        app:layout_constraintStart_toEndOf="@+id/balanceTextView"
        app:layout_constraintTop_toBottomOf="@+id/balanceTitleTextView"
        style="@style/BlackBoldTitleStyle"/>

    <ImageView
        android:id="@+id/searchImageView"
        android:layout_width="@dimen/icon_size"
        android:layout_height="@dimen/icon_size"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="@dimen/to_parent_default"
        android:src="@drawable/search_ic"
        app:layout_constraintEnd_toStartOf="@+id/moreImageView"
        app:layout_constraintTop_toTopOf="@+id/balanceTitleTextView" />

    <ImageView
        android:id="@+id/moreImageView"
        android:layout_width="@dimen/icon_size"
        android:layout_height="@dimen/icon_size"
        android:layout_marginEnd="@dimen/to_parent_default"
        android:src="@drawable/more_ic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/searchImageView" />

    <TextView
        android:id="@+id/lastOperationsTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/last_operation"
        app:layout_constraintStart_toStartOf="@+id/balanceTitleTextView"
        app:layout_constraintTop_toBottomOf="@+id/balanceTextView"
        style="@style/BlackBoldPageTitleStyle"/>

    <HorizontalScrollView
        android:id="@+id/filtersLayoutScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lastOperationsTitleTextView">

        <LinearLayout
            android:id="@+id/filtersLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/operationTypeFilterButton"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/filter_button_height"
                android:layout_marginStart="@dimen/to_parent_default"
                style="@style/FilterButtonLayoutStyle">

                <TextView
                    android:id="@+id/operationTypeFilterTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/operation_type_title"
                    style="@style/FilterButtonTextStyle"/>

                <ImageView
                    android:id="@+id/operationTypeFilterIcon"
                    android:layout_width="@dimen/icon_size"
                    android:layout_height="@dimen/icon_size"
                    android:src="@drawable/chevron_down_ic_selector"
                    android:layout_marginStart="@dimen/filter_button_icon_to_text"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/accountFilterButton"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/filter_button_height"
                android:layout_marginStart="@dimen/to_parent_default"
                style="@style/FilterButtonLayoutStyle">

                <TextView
                    android:id="@+id/accountFilterTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/account"
                    style="@style/FilterButtonTextStyle"/>

                <ImageView
                    android:id="@+id/accountFilterIcon"
                    android:layout_width="@dimen/icon_size"
                    android:layout_height="@dimen/icon_size"
                    android:src="@drawable/chevron_down_ic_selector"
                    android:layout_marginStart="@dimen/filter_button_icon_to_text"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/periodFilterButton"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/filter_button_height"
                android:layout_marginStart="@dimen/to_parent_default"
                android:layout_marginEnd="@dimen/to_parent_default"
                style="@style/FilterButtonLayoutStyle">

                <TextView
                    android:id="@+id/periodFilterTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/period"
                    style="@style/FilterButtonTextStyle"/>

                <ImageView
                    android:id="@+id/periodFilterIcon"
                    android:layout_width="@dimen/icon_size"
                    android:layout_height="@dimen/icon_size"
                    android:src="@drawable/chevron_down_ic_selector"
                    android:layout_marginStart="@dimen/filter_button_icon_to_text"/>

            </LinearLayout>

        </LinearLayout>

    </HorizontalScrollView>

    <TextView
        android:id="@+id/emptyOperationListTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty_operation_list_title"
        app:layout_constraintBottom_toTopOf="@+id/addOperationFab"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/filtersLayoutScrollView"
        app:layout_constraintVertical_bias="0.515"
        style="@style/EmptyOperationListViewStyle" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addOperationFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/to_parent_default"
        android:layout_marginBottom="68dp"
        android:src="@drawable/add_ic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@color/white"
        style="@style/AddOperationFabStyle" />

</androidx.constraintlayout.widget.ConstraintLayout>