<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="0dp"
    android:padding="0dp"
    tools:context=".presentation.view.activity.NewOperationActivity">

    <ImageView
        android:id="@+id/backIcon"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="22dp"
        android:padding="@dimen/back_ic_padding"
        android:src="@drawable/back_ic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <HorizontalScrollView
        android:id="@+id/operationTypeLayoutScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/filters_to_back_ic"
        android:scrollbars="none"
        app:layout_constraintTop_toBottomOf="@id/backIcon">

        <LinearLayout
            android:id="@+id/operationTypeLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/incomeButton"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/filter_button_height"
                android:background="@drawable/filter_button_ripple"
                style="@style/FilterButtonLayout">

                <TextView
                    android:id="@+id/incomeTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/income"
                    style="@style/FilterButtonText"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/expenseButton"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/filter_button_height"
                android:layout_marginStart="@dimen/filter_margin"
                android:background="@drawable/filter_button_ripple"
                style="@style/FilterButtonLayout">

                <TextView
                    android:id="@+id/expenseTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/expense"
                    style="@style/FilterButtonText"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/transferButton"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/filter_button_height"
                android:layout_marginStart="@dimen/filter_margin"
                android:background="@drawable/filter_button_ripple"
                style="@style/FilterButtonLayout">

                <TextView
                    android:id="@+id/transferTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/transfer"
                    style="@style/FilterButtonText"/>

            </LinearLayout>

        </LinearLayout>

    </HorizontalScrollView>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment_container_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        tools:layout="@layout/fragment_new_expense"
        android:layout_marginTop="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/operationTypeLayoutScrollView" />

</androidx.constraintlayout.widget.ConstraintLayout>