<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="0dp"
    android:background="@drawable/bottom_sheet_dialog_bg"
    android:padding="0dp"
    tools:context=".presentation.view.dialog.OperationTypeDialog">

    <LinearLayout
        android:id="@+id/swapView"
        android:layout_width="32dp"
        android:layout_height="4dp"
        android:layout_marginEnd="@dimen/def"
        android:background="@drawable/swapper_bg"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/operationTypeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/operation_type_title"
        android:textColor="@color/black"
        android:textSize="@dimen/text_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/swapView" />

    <LinearLayout
        android:id="@+id/closeIconLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/close_ic_padding"
        android:layout_marginEnd="@dimen/twelve"
        app:layout_constraintBottom_toBottomOf="@+id/operationTypeTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/operationTypeTextView">

        <ImageView
            android:id="@+id/closeIcon"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:src="@drawable/close_ic_black" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/incomeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/half_def"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="@+id/operationTypeTextView"
        app:layout_constraintTop_toBottomOf="@id/operationTypeTextView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/half_def"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/incomeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/income"
                android:textColor="@color/black"
                android:textSize="@dimen/text_title" />

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/incomeCheckIcon"
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:layout_marginEnd="@dimen/def"
                android:src="@drawable/check_ic"
                android:visibility="invisible" />

        </LinearLayout>

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/topDivider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/twelve"
            app:dividerColor="@color/bar" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/expenseLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/six"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="@+id/incomeLayout"
        app:layout_constraintTop_toBottomOf="@id/incomeLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/six"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/expenseTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/expense"
                android:textColor="@color/black"
                android:textSize="@dimen/text_title" />

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/expenseCheckIcon"
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:layout_marginEnd="@dimen/def"
                android:src="@drawable/check_ic"
                android:visibility="invisible" />

        </LinearLayout>

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/middleDivider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/twelve"
            app:dividerColor="@color/bar" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/transferLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/six"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="@+id/expenseLayout"
        app:layout_constraintTop_toBottomOf="@id/expenseLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/six"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/transferTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/transfer"
                android:textColor="@color/black"
                android:textSize="@dimen/text_title" />

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/transferCheckIcon"
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:layout_marginEnd="@dimen/def"
                android:src="@drawable/check_ic"
                android:visibility="invisible" />

        </LinearLayout>

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/bottomDivider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="31dp"
            android:visibility="invisible" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>